tests/negative/gold/import_dot_test.gold
tests/negative/import_dot_test.toit:5:11: error: Incomplete import clause
import ...
          ^
tests/negative/import_dot_test.toit:6:12: error: Incomplete import clause
import foo.
           ^
tests/negative/import_dot_test.toit:7:11: error: Incomplete import clause
import ...  // comment
          ^~~~~~~~~~~~
tests/negative/import_dot_test.toit:8:12: error: Incomplete import clause
import foo. // comment
           ^~~~~~~~~~~
tests/negative/import_dot_test.toit:9:11: error: Incomplete import clause
import ...  /* comment
          ^
tests/negative/import_dot_test.toit:11:12: error: Incomplete import clause
import foo. /* comment
           ^
tests/negative/import_dot_test.toit:15:9: error: Unresolved identifier: 'unresolved'
  print unresolved
        ^~~~~~~~~~
Compilation failed.
